statum-macros/tests/ui/invalid_transition_introspect_override_non_machine_return.stderr
error: Error: transition method `Machine<Draft>::finish` returns an unsupported type.
       Found: `fn finish(self) -> ::core::result::Result<(), ()>`
       Expected: `fn finish(self) -> ::core::result::Result<Machine<NextState>, E>`
       Reason: even with `#[introspect(return = ...)]`, the written return type must still resolve to the impl target machine path or a supported wrapper around it
       Fix: move `Machine<NextState>` into the primary branch, for example with `fn finish(self) -> ::core::result::Result<Machine<NextState>, E>`, or return `Machine<NextState>` directly if you do not need the wrapper.
       Primary branch: `()`
       Note: Supported strict introspection shapes are direct machine paths and supported `::core::option::Option<...>`, `::core::result::Result<..., E>`, and `::statum::Branch<..., ...>` wrappers around direct machine paths.
             Source-backed aliases may be expanded only to suggest an explicit `#[introspect(return = ...)]`; they are not accepted as authoritative transition contracts in strict mode. Imported aliases, macro-generated aliases, include-generated aliases, ambiguous aliases, and foreign machine paths are rejected.
       Help: add `#[introspect(return = Machine<NextState>)]` with a direct machine path and supported wrapper shape, or rewrite the signature to use that direct type.
             Source-backed alias expansion is diagnostics-only in strict mode.
  --> tests/ui/invalid_transition_introspect_override_non_machine_return.rs:25:24
   |
25 |     fn finish(self) -> ::core::result::Result<(), ()> {
   |                        ^
